--- a/src/app/components/dashboard/case-count/case-count.component.html
+++ b/src/app/components/dashboard/case-count/case-count.component.html
@@ -1,30 +1,33 @@
-<div class="app-padding" fxFlex fxLayout="row" fxLayout.xs="column" fxLayoutAlign="space-around center" *ngIf="data">
-    <mat-card fxflex="25" class="case-count mat-elevation-z0 total" fxFlex fxLayout="column" fxLayoutAlign="center center">
-        <div fxFlex fxLayout="row" fxLayoutAlign="space-around center">
+<div class="app-padding" fxLayout="row wrap" fxLayout.gt-xs="row" fxLayoutAlign="space-around center" *ngIf="!isLoading">
+    <mat-card fxFlex="1 0 calc(50% - 40px)" fxFlex.gt-xs="1 0 calc(25% - 40px)" class="case-count mat-elevation-z0 total" fxLayout="column" fxLayoutAlign="center center">
+        <div fxLayout="row" fxLayoutAlign="space-around center">
             <mat-icon>done</mat-icon>
-            <h2>{{ data.confirmed }}</h2>
+            <h2>{{ data.cases }}</h2>
         </div>
         <h3>Confirmed</h3>
     </mat-card>
-    <mat-card fxflex="25" class="case-count mat-elevation-z0 active" fxFlex fxLayout="column" fxLayoutAlign="center center">
-        <div fxFlex fxLayout="row" fxLayoutAlign="space-around center">
+    <mat-card fxFlex="1 0 calc(50% - 40px)" fxFlex.gt-xs="1 0 calc(25% - 40px)" class="case-count mat-elevation-z0 active" fxLayout="column" fxLayoutAlign="center center">
+        <div fxLayout="row" fxLayoutAlign="space-around center">
             <mat-icon>single_bed</mat-icon>
-            <h2>{{ data.confirmed - data.recovered - data.deaths }}</h2>
+            <h2>{{ data.cases - data.recovered - data.deaths }}</h2>
         </div>
         <h3>Active</h3>
     </mat-card>
-    <mat-card fxflex="25" class="case-count mat-elevation-z0 recovered" fxFlex fxLayout="column" fxLayoutAlign="center center">
-        <div fxFlex fxLayout="row" fxLayoutAlign="space-around center">
+    <mat-card fxFlex="1 0 calc(50% - 40px)" fxFlex.gt-xs="1 0 calc(25% - 40px)" class="case-count mat-elevation-z0 recovered" fxLayout="column" fxLayoutAlign="center center">
+        <div fxLayout="row" fxLayoutAlign="space-around center">
             <mat-icon>verified_user</mat-icon>
             <h2>{{ data.recovered }}</h2>
         </div>
         <h3>Recovered</h3>
     </mat-card>
-    <mat-card fxflex="25" class="case-count mat-elevation-z0 death" fxFlex fxLayout="column" fxLayoutAlign="center center">
-        <div fxFlex fxLayout="row" fxLayoutAlign="space-around center">
+    <mat-card fxFlex="1 0 calc(50% - 40px)" fxFlex.gt-xs="1 0 calc(25% - 40px)" class="case-count mat-elevation-z0 death" fxLayout="column" fxLayoutAlign="center center">
+        <div fxLayout="row" fxLayoutAlign="space-around center">
             <mat-icon>error</mat-icon>
             <h2>{{ data.deaths }}</h2>
         </div>
         <h3>Deaths</h3>
     </mat-card>
+</div>
+<div class="app-padding" fxLayout="row wrap" fxLayoutAlign="center center" *ngIf="isLoading">
+    <app-dataloading></app-dataloading>
 </div>
