--- a/src/app/components/dashboard/world-map/world-map.component.html
+++ b/src/app/components/dashboard/world-map/world-map.component.html
@@ -1,3 +1,8 @@
-<div class="app-padding" fxFlex fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center">
+<mat-card class="mat-elevation-z0" fxFlex fxLayout="column" fxLayoutAlign="center">
+    <div class="app-padding" fxFlex fxLayout="row wrap" fxLayoutAlign="space-between center">
+        <h2>Global</h2>
+        <!-- <h6>sxc</h6> -->
+    </div>
+    <app-dataloading *ngIf="isLoading"></app-dataloading>
     <div id="chartdiv" style="width: 100%; height: 500px"></div>
-</div>
+</mat-card>
