--- a/src/themes/theme.scss
+++ b/src/themes/theme.scss
@@ -1,9 +1,9 @@
 @import '~@angular/material/theming';
 @include mat-core();
 
-$app-primary: mat-palette($mat-grey);
+$app-primary: mat-palette($mat-deep-orange, 300);
 $app-accent:  mat-palette($mat-pink, 500, 900, A100);
-$app-warn:    mat-palette($mat-deep-orange);
+$app-warn:    mat-palette($mat-red);
 
 $app-light-theme: mat-light-theme($app-primary, $app-accent, $app-warn);
 $app-dark-theme: mat-dark-theme($app-primary, $app-accent, $app-warn);
