--- a/src/app/components/dashboard/world-map/world-map.component.html
+++ b/src/app/components/dashboard/world-map/world-map.component.html
@@ -1,6 +1,6 @@
 <mat-card class="mat-elevation-z0" fxFlex fxLayout="column" fxLayoutAlign="center">
     <div class="app-padding" fxFlex fxLayout="row wrap" fxLayoutAlign="space-between center">
-        <h2>Global</h2>
+        <h2 class="no-margin">Global</h2>
         <!-- <h6>sxc</h6> -->
     </div>
     <app-dataloading *ngIf="isLoading"></app-dataloading>
