--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,3 +12,6 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif;
 .app-padding{
     padding: 20px;
 }
+.no-margin{
+    margin: 0px;
+}
