--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,3 +1,4 @@
 <app-case-count></app-case-count>
-<app-world-map></app-world-map>
+<!-- <app-world-map></app-world-map> -->
+<app-line-chart></app-line-chart>
 <!-- <!-- <app-world-datatable></app-world-datatable> -->
