--- a/src/app/components/dashboard/world-map/world-map.component.scss
+++ b/src/app/components/dashboard/world-map/world-map.component.scss
@@ -2,3 +2,19 @@ mat-card{
     padding: 0;
     margin: 20px;
 }
+mat-button-toggle:nth-child(1) {
+    // background: rgba(136, 136, 255, 0.6);
+    color: #5656d2 !important;
+}
+mat-button-toggle:nth-child(2) {
+    // background: rgba(228, 246, 124, 0.6);
+    color: #869820 !important;
+}
+mat-button-toggle:nth-child(3) {
+    // background: rgba(100, 232, 122, 0.6);
+    color: #41a551 !important;
+}
+mat-button-toggle:nth-child(4) {
+    // background: rgba(232, 100, 100, .6);
+    color: #c85353 !important;
+}
