--- a/src/themes/theme.scss
+++ b/src/themes/theme.scss
@@ -1,7 +1,7 @@
 @import '~@angular/material/theming';
 @include mat-core();
 
-$app-primary: mat-palette($mat-deep-orange, 300);
+$app-primary: mat-palette($mat-grey, 100);
 $app-accent:  mat-palette($mat-pink, 500, 900, A100);
 $app-warn:    mat-palette($mat-red);
 
