XY chart color fixed

--- a/src/app/components/dashboard/world-map/world-map.component.html
+++ b/src/app/components/dashboard/world-map/world-map.component.html
@@ -9,5 +9,5 @@
         </mat-button-toggle-group>
     </div>
     <app-dataloading *ngIf="isLoading"></app-dataloading>
-    <div id="chartdiv" style="width: 100%; height: 500px"></div>
+    <div id="mapdiv" style="width: 100%; height: 500px"></div>
 </mat-card>
