--- a/src/app/components/dashboard/world-map/world-map.component.scss
+++ b/src/app/components/dashboard/world-map/world-map.component.scss
@@ -1,6 +1,5 @@
 mat-card{
-    padding: 0;
-    margin: 20px;
+    padding: 15px;
 }
 mat-button-toggle:nth-child(1) {
     // background: rgba(136, 136, 255, 0.6);
