--- a/src/app/components/dashboard/line-chart/line-chart.component.html
+++ b/src/app/components/dashboard/line-chart/line-chart.component.html
@@ -1,8 +1,7 @@
-
-<mat-card class="mat-elevation-z0" fxFlex fxLayout="column" fxLayoutAlign="center">
-    <div class="app-padding" fxFlex fxLayout="row wrap" fxLayoutAlign="space-between center">
-        <h2 class="no-margin">Global</h2>
+<mat-card class="mat-elevation-z0 d-flex flex-column justify-content-start">
+    <div class="d-flex justify-content-between">
+        <h2 class="no-margin">Global Numbers</h2>
     </div>
-    <app-dataloading *ngIf="isLoading"></app-dataloading>
-    <div id="chartdiv" style="width: 100%; height: 500px"></div>
+    <app-dataloading *ngIf="isLoading" class="d-flex align-self-center mt-5"></app-dataloading>
+    <div id="chartdiv" style="width: 100%; height: 330px"></div>
 </mat-card>
