--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,12 +3,38 @@
 @import './themes/variable.scss';
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif;
+body { margin: 0; font-family: Sen, "Helvetica Neue", sans-serif;
     background: $app-primary;
 }
-.app-padding{
-    padding: 20px;
+.container-fluid{
+    padding: 30px;
 }
 .no-margin{
     margin: 0px;
+}
+.section{
+    margin-top: 30px;
+}
+.info-section{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+}
+.scroll-x{
+    overflow-x: scroll;
+}
+button:focus{
+    outline: none;
+}
+.app-card{
+    background: white;
+    color: rgba(0, 0, 0, 0.87);
+    transition: box-shadow 280ms cubic-bezier(0.4, 0, 0.2, 1);
+    position: relative;
+    padding: 16px;
+    margin: 0px;
+    border-radius: 4px;
+}
+.text-light{
+    color: rgba(0, 0, 0, 0.67) !important;
 }
