--- a/src/themes/theme.scss
+++ b/src/themes/theme.scss
@@ -1,23 +1,18 @@
 @import '~@angular/material/theming';
 @include mat-core();
 
-$app-primary: mat-palette($mat-grey, 100);
+$app-primary: mat-palette($mat-grey, 200);
 $app-accent:  mat-palette($mat-pink, 500, 900, A100);
 $app-warn:    mat-palette($mat-red);
 
 $app-light-theme: mat-light-theme($app-primary, $app-accent, $app-warn);
-$app-dark-theme: mat-dark-theme($app-primary, $app-accent, $app-warn);
 
 .light-theme{
     @include angular-material-theme($app-light-theme);
 }
 
-.dark-theme{
-    @include angular-material-theme($app-dark-theme);
-}
-
 $app-typography: mat-typography-config(
-      $font-family: 'Roboto, "Helvetica Neue", sans-serif',
+      $font-family: 'Sen, "Helvetica Neue", sans-serif',
       $display-4:     mat-typography-level(112px, 112px, 300),
       $display-3:     mat-typography-level(56px, 56px, 400),
       $display-2:     mat-typography-level(45px, 48px, 400),
