--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,5 @@
-<mat-toolbar color="primary">
-    <mat-toolbar-row class="d-flex justify-content-between">
-        <span>Covid-19-Dash</span>
-        <button (click)="launchWHO()" mat-stroked-button color="accent">WHO</button>
-    </mat-toolbar-row>
-</mat-toolbar>
+<app-header></app-header>
 <div class="container-fluid">
     <router-outlet></router-outlet>
 </div>
+<app-footer></app-footer>
