--- a/src/app/components/dashboard/line-chart/line-chart.component.html
+++ b/src/app/components/dashboard/line-chart/line-chart.component.html
@@ -1,7 +1,8 @@
 <mat-card class="mat-elevation-z0 d-flex flex-column justify-content-start">
     <div class="d-flex justify-content-between">
-        <h2 class="no-margin">Global Numbers</h2>
+        <h2 class="no-margin">Cases over time</h2>
     </div>
-    <app-dataloading *ngIf="isLoading" class="d-flex align-self-center mt-5"></app-dataloading>
+    <app-dataloading *ngIf="isLoading && !error" class="d-flex align-self-center mt-5"></app-dataloading>
     <div id="chartdiv" style="width: 100%; height: 330px"></div>
 </mat-card>
+<app-error *ngIf="error && !isLoading"></app-error>
