--- a/src/app/components/dashboard/world-datatable/world-datatable.component.html
+++ b/src/app/components/dashboard/world-datatable/world-datatable.component.html
@@ -1,10 +1,13 @@
 <mat-card class="mat-elevation-z0 d-flex flex-column justify-content-start">
     <app-dataloading *ngIf="isLoading" class="d-flex align-self-center mt-5"></app-dataloading>
+    <div class="d-flex justify-content-between">
+      <h2 class="no-margin">Cases by country</h2>
+  </div>
     <mat-form-field>
       <mat-label>Filter</mat-label>
       <input matInput (keyup)="applyFilter($event)" placeholder="Country name">
     </mat-form-field>
-   <div class="scroll-x">
+   <div class="scroll-x data-table" id="data-table" *ngIf="!isLoading && !error">
     <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z0" matSortActive="country" matSortDirection="asc" matSortDisableClear>
       <ng-container matColumnDef="country">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Country </th>
@@ -31,9 +34,11 @@
         <td mat-cell *matCellDef="let element"> {{element.deaths}} </td>
       </ng-container>
     
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
     </table>
    </div>
     <mat-paginator [pageSizeOptions]="[10, 20, 30]" showFirstLastButtons></mat-paginator>
 </mat-card>
+<app-error *ngIf="error && !isLoading"></app-error>
