--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,7 +21,7 @@ body { margin: 0; font-family: Sen, "Helvetica Neue", sans-serif;
     justify-content: flex-start;
 }
 .scroll-x{
-    overflow-x: scroll;
+    overflow-x: auto;
 }
 button:focus{
     outline: none;
@@ -37,4 +37,180 @@ button:focus{
 }
 .text-light{
     color: rgba(0, 0, 0, 0.67) !important;
+}
+.loader{
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    height: 100%;
+    width: 100%;
+    background: white;
+}
+.cssload-loader {
+	width: 70px;
+	height: 14px;
+    position: relative;
+    margin-top: 50px;
+}
+.cssload-loader > div {
+	content: " ";
+	width: 8px;
+	height: 8px;
+	background: rgb(200,83,83);
+	border-radius: 100%;
+	position: absolute;
+	animation: cssload-shift 1.7s linear infinite;
+		-o-animation: cssload-shift 1.7s linear infinite;
+		-ms-animation: cssload-shift 1.7s linear infinite;
+		-webkit-animation: cssload-shift 1.7s linear infinite;
+		-moz-animation: cssload-shift 1.7s linear infinite;
+}
+.cssload-loader > div:nth-of-type(1) {
+	animation-delay: -0.34s;
+		-o-animation-delay: -0.34s;
+		-ms-animation-delay: -0.34s;
+		-webkit-animation-delay: -0.34s;
+		-moz-animation-delay: -0.34s;
+}
+.cssload-loader > div:nth-of-type(2) {
+	animation-delay: -0.68s;
+		-o-animation-delay: -0.68s;
+		-ms-animation-delay: -0.68s;
+		-webkit-animation-delay: -0.68s;
+		-moz-animation-delay: -0.68s;
+}
+.cssload-loader > div:nth-of-type(3) {
+	animation-delay: -1.02s;
+		-o-animation-delay: -1.02s;
+		-ms-animation-delay: -1.02s;
+		-webkit-animation-delay: -1.02s;
+		-moz-animation-delay: -1.02s;
+}
+.cssload-loader > div:nth-of-type(4) {
+	animation-delay: -1.36s;
+		-o-animation-delay: -1.36s;
+		-ms-animation-delay: -1.36s;
+		-webkit-animation-delay: -1.36s;
+		-moz-animation-delay: -1.36s;
+}
+@keyframes cssload-shift {
+	0% {
+		left: -42px;
+		opacity: 0;
+		background-color: rgb(200,83,83);
+	}
+	10% {
+		left: 0;
+		opacity: 1;
+	}
+	90% {
+		left: 70px;
+		opacity: 1;
+	}
+	100% {
+		left: 112px;
+		background-color: rgb(200,83,83);
+		opacity: 0;
+	}
+}
+
+@-o-keyframes cssload-shift {
+	0% {
+		left: -42px;
+		opacity: 0;
+		background-color: rgb(200,83,83);
+	}
+	10% {
+		left: 0;
+		opacity: 1;
+	}
+	90% {
+		left: 70px;
+		opacity: 1;
+	}
+	100% {
+		left: 112px;
+		background-color: rgb(200,83,83);
+		opacity: 0;
+	}
+}
+
+@-ms-keyframes cssload-shift {
+	0% {
+		left: -42px;
+		opacity: 0;
+		background-color: rgb(200,83,83);
+	}
+	10% {
+		left: 0;
+		opacity: 1;
+	}
+	90% {
+		left: 70px;
+		opacity: 1;
+	}
+	100% {
+		left: 112px;
+		background-color: rgb(200,83,83);
+		opacity: 0;
+	}
+}
+
+@-webkit-keyframes cssload-shift {
+	0% {
+		left: -42px;
+		opacity: 0;
+		background-color: rgb(200,83,83);
+	}
+	10% {
+		left: 0;
+		opacity: 1;
+	}
+	90% {
+		left: 70px;
+		opacity: 1;
+	}
+	100% {
+		left: 112px;
+		background-color: rgb(200,83,83);
+		opacity: 0;
+	}
+}
+
+@-moz-keyframes cssload-shift {
+	0% {
+		left: -42px;
+		opacity: 0;
+		background-color: rgb(200,83,83);
+	}
+	10% {
+		left: 0;
+		opacity: 1;
+	}
+	90% {
+		left: 70px;
+		opacity: 1;
+	}
+	100% {
+		left: 112px;
+		background-color: rgb(200,83,83);
+		opacity: 0;
+	}
+}
+
+::-webkit-scrollbar-track
+{
+	background-color: #eeeeee;
+}
+
+::-webkit-scrollbar
+{
+	width: 6px;
+	background-color: #c5c5c5;
+}
+
+::-webkit-scrollbar-thumb
+{
+	background-color: #c5c5c5;
 }
