Country data added

--- a/src/app/components/dashboard/world-datatable/world-datatable.component.scss
+++ b/src/app/components/dashboard/world-datatable/world-datatable.component.scss
@@ -1,5 +1,11 @@
 table {
-    width: 100%;
+	width: 100%;
+	tr{
+		cursor: pointer;
+		&:hover td{
+			background: #f5f5f5;
+		}
+	}
 }
 th.mat-sort-header-sorted {
     color: black;
