--- a/src/app/components/dashboard/world-datatable/world-datatable.component.html
+++ b/src/app/components/dashboard/world-datatable/world-datatable.component.html
@@ -1,17 +1,18 @@
 <mat-card class="mat-elevation-z0 d-flex flex-column justify-content-start">
-    <app-dataloading *ngIf="isLoading" class="d-flex align-self-center mt-5"></app-dataloading>
-    <div class="d-flex justify-content-between">
-      <h2 class="no-margin">Cases by country</h2>
-  </div>
+  <div class="d-flex justify-content-between">
+    <h2 class="no-margin">Cases by country</h2>
     <mat-form-field>
-      <mat-label>Filter</mat-label>
+      <mat-label>Search country</mat-label>
       <input matInput (keyup)="applyFilter($event)" placeholder="Country name">
     </mat-form-field>
-   <div class="scroll-x data-table" id="data-table" *ngIf="!isLoading && !error">
+  </div>
+  <app-dataloading *ngIf="isLoading" class="d-flex align-self-center mt-5"></app-dataloading>
+   <div class="scroll-x data-table" id="data-table" [hidden]="isLoading || error">
     <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z0" matSortActive="country" matSortDirection="asc" matSortDisableClear>
+
       <ng-container matColumnDef="country">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Country </th>
-        <td mat-cell *matCellDef="let element"> {{element.country}} </td>
+        <td mat-cell *matCellDef="let element"> <img style="width: 30px;margin-right: 5px;top: -2px;position: relative;" [src]="'https://www.countryflags.io/'+ element.code +'/flat/64.png'" alt="{{element.country}}"> {{element.country}} </td>
       </ng-container>
     
       <ng-container matColumnDef="cases">
@@ -35,7 +36,7 @@
       </ng-container>
     
       <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      <tr mat-row (click)="onRowClick(row)" *matRowDef="let row; columns: displayedColumns;"></tr>
 
     </table>
    </div>
