--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <app-case-count></app-case-count>
 <div class="row">
     <div class="col-md-6 col-12 section">
-        <!-- <app-world-map></app-world-map> -->
+        <app-world-map></app-world-map>
     </div>
     <div class="col-md-6 col-12 section info-section">
         <div class="app-card info-card row mat-elevation-z0">
