--- a/src/app/components/dashboard/world-datatable/world-datatable.component.html
+++ b/src/app/components/dashboard/world-datatable/world-datatable.component.html
@@ -36,7 +36,7 @@
       </ng-container>
     
       <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
-      <tr mat-row (click)="onRowClick(row)" *matRowDef="let row; columns: displayedColumns;"></tr>
+      <tr mat-row matTooltip="View {{ row.country }}'s statistics" (click)="onRowClick(row)" *matRowDef="let row; columns: displayedColumns;"></tr>
 
     </table>
    </div>
