--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -15,3 +15,13 @@
         margin-left: 10px;
     }
 }
+.light-mode-icon{
+    color: #d2e85c;
+    position: relative;
+    top: 3px;
+}
+.dark-mode-icon{
+    color: #ffffff;
+    position: relative;
+    top: 3px;
+}
