--- a/src/app/components/dashboard/daily-updates/daily-updates.component.html
+++ b/src/app/components/dashboard/daily-updates/daily-updates.component.html
@@ -1,4 +1,4 @@
-<div class="row" *ngIf="!isLoading && !error">
+<div class="row mt-3" *ngIf="!isLoading && !error">
     <div class="col-md-6 col-sm-6 col-6">
         <mat-card class="case-count mat-elevation-z0 total text-center">
             <div class="d-flex justify-content-center align-items-center">
