--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="primary">
     <mat-toolbar-row class="d-flex justify-content-between">
-        <span [routerLink]="['/dashboard']">Covid-19-Dash</span>
+        <span [routerLink]="['/dashboard']">statscovid19</span>
         <div class="d-flex justify-content-end align-items-center">
             <mat-slide-toggle class="mr-3" [checked]="_commonService.isDarkMode" matTooltip="Toggle dark mode" (change)="onDarkModeSwitched($event)">
                 <mat-icon class="light-mode-icon" *ngIf="!_commonService.isDarkMode">wb_sunny</mat-icon>
@@ -11,8 +11,6 @@
         </div>
     </mat-toolbar-row>
 </mat-toolbar>
-<mat-progress-bar *ngIf="_commonService.routeLoading" color="accent" mode="indeterminate">
-</mat-progress-bar>
 <div class="breadcrumb-toolbar d-flex justify-content-between align-items-center">
    <div class="d-flex justify-content-start align-items-center">
     <ng-container *ngIf="!_commonService.country">
