--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -3,7 +3,35 @@
     <div class="col-md-6 col-12 section">
         <app-world-map></app-world-map>
     </div>
-    <div class="col-md-6 col-12 section info-section">
+    <div class="col-md-6 col-12 section">
+        <app-world-datatable></app-world-datatable>
+    </div>
+</div>
+<div class="row">
+    <div class="col-md-12 col-12 section">
+        <app-line-chart></app-line-chart>
+    </div>
+</div>
+<div class="row section">
+    <div class="col-md-6 col-12">
+        <div class="app-card info-card row mat-elevation-z0 d-flex flex-column">
+            <div class="d-flex justify-content-between">
+                <h2 class="no-margin">Daily Updates</h2>
+            </div>
+            <app-daily-updates></app-daily-updates>
+        </div>
+    </div>
+    <div class="col-md-6 col-12">
+        <div class="app-card info-card row mat-elevation-z0 d-flex flex-column">
+            <div class="d-flex justify-content-between">
+                <h2 class="no-margin">Weekly Updates</h2>
+            </div>
+            <app-weekly-updates></app-weekly-updates>
+        </div>
+    </div>
+</div>
+<div class="row section">
+    <div class="col-md-6 col-12 info-section">
         <div class="app-card info-card row mat-elevation-z0">
             <div class="col-md-4 col-4">
                 <img src="assets/medical_research.svg" style="max-width: 130px;" alt="Prevent Infection">
@@ -13,6 +41,8 @@
                 <h4 class="mt-3 text-light">Follow these measures to prevent from infection against Covid-19</h4>
             </div>
         </div>
+    </div>
+    <div class="col-md-6 col-12 info-section">
         <div class="app-card info-card row mat-elevation-z0">
             <div class="col-md-4 col-4">
                 <img src="assets/sick_person.png" style="max-width: 130px;" alt="View symptoms">
@@ -22,37 +52,5 @@
                 <h4 class="mt-3 text-light">Find out the symptoms of Covid-19</h4>
             </div>
         </div>
-    </div>
-</div>
-<div class="row">
-    <div class="col-md-12 col-12 section">
-        <app-line-chart></app-line-chart>
-    </div>
-</div>
-<div class="row">
-    <div class="col-md-4 col-12">
-        <div class="row section">
-            <div class="col-md-12 col-12">
-                <div class="app-card info-card row mat-elevation-z0 d-flex flex-column">
-                    <div class="d-flex justify-content-between">
-                        <h2 class="no-margin">Daily Updates</h2>
-                    </div>
-                    <app-daily-updates></app-daily-updates>
-                </div>
-            </div>
-        </div>
-        <div class="row section">
-            <div class="col-md-12 col-12">
-                <div class="app-card info-card row mat-elevation-z0 d-flex flex-column">
-                    <div class="d-flex justify-content-between">
-                        <h2 class="no-margin">Weekly Updates</h2>
-                    </div>
-                    <app-weekly-updates></app-weekly-updates>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="col-md-8 col-12 section">
-        <app-world-datatable></app-world-datatable>
     </div>
 </div>
