--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -33,7 +33,7 @@
 <div class="row section">
     <div class="col-md-6 col-12 info-section">
         <div class="app-card info-card row mat-elevation-z0">
-            <div class="col-md-4 col-4">
+            <div class="col-md-4 col-4 d-flex justify-content-center">
                 <img src="assets/medical_research.svg" style="max-width: 130px;" alt="Prevent Infection">
             </div>
             <div class="col-md-8 col-8 info-text">
@@ -44,7 +44,7 @@
     </div>
     <div class="col-md-6 col-12 info-section">
         <div class="app-card info-card row mat-elevation-z0">
-            <div class="col-md-4 col-4">
+            <div class="col-md-4 col-4 d-flex justify-content-center">
                 <img src="assets/sick_person.png" style="max-width: 130px;" alt="View symptoms">
             </div>
             <div class="col-md-8 col-8 info-text">
